# artifacts-librarian

./: Cargo.toml  generator-config.yaml
spec/: openapi.json
src/apis/: accounts_api.rs  achievements_api.rs  characters_api.rs  configuration.rs  default_api.rs  events_api.rs  grand_exchange_api.rs  items_api.rs  leaderboard_api.rs  maps_api.rs  monsters_api.rs  my_account_api.rs  my_characters_api.rs  resources_api.rs  token_api.rs
src/models/: achievement_schema.rs  active_event_schema.rs  add_account_schema.rs  add_character_schema.rs  announcement_schema.rs  bank_extension_schema.rs  bank_extension_transaction_response_schema.rs  bank_extension_transaction_schema.rs  bank_gold_transaction_response_schema.rs  bank_gold_transaction_schema.rs  bank_item_transaction_response_schema.rs  bank_item_transaction_schema.rs  bank_response_schema.rs  bank_schema.rs  base_achievement_schema.rs  baseachievement_response_schema.rs  blocked_hits_schema.rs  change_password.rs  character_fight_data_schema.rs  character_fight_response_schema.rs  character_leaderboard_schema.rs  character_movement_data_schema.rs  character_movement_response_schema.rs  character_response_schema.rs  character_schema.rs  cooldown_schema.rs  craft_schema.rs  crafting_schema.rs  data_page_achievement_schema_.rs  data_page_active_event_schema_.rs  data_page_base_achievement_schema_.rs  data_page_character_leaderboard_schema_.rs  data_page_character_schema_.rs  data_page_ge_item_schema_.rs  data_page_item_schema_.rs  data_page_log_schema_.rs  data_page_map_schema_.rs  data_page_monster_schema_.rs  (+58 more)
