[package]
name = "artifacts-librarian"
description = "Rust client for Artifacts"
version = "1.0.3"
authors = ["Chiffa"]
license = "MIT"
edition = "2021"
keywords = ["artifactsmmo"]
repository = "https://github.com/Chiffario/artifacts-librarian"
readme = "README.md"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
  "base64",
  "std",
  "macros",
] }
serde_json = "^1.0"
url = "^2.5"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
